# perpetuals

./: .gitignore  Anchor.toml  README.md  docker-compose.yml  package.json  update-cli.sh
.devcontainer/: Dockerfile  README.md
.githooks/: pre-commit
cli/: README.md  package.json  (+1 more)
programs/ausd_faucet/: Cargo.toml
programs/ausd_faucet/src/: lib.rs
programs/perpetuals/: Cargo.toml
programs/perpetuals/src/: error.rs  instructions.rs  lib.rs  macros.rs
programs/perpetuals/src/instructions/: add_collateral.rs  add_custody.rs  add_custody_init.rs  add_liquidity.rs  close_position.rs  get_add_liquidity_amount_and_fee.rs  get_assets_under_management.rs  get_entry_price_and_fee.rs  get_exit_price_and_fee.rs  get_liquidation_price.rs  get_liquidation_state.rs  get_lp_token_price.rs  get_oracle_price.rs  get_pnl.rs  get_remove_liquidity_amount_and_fee.rs  get_swap_amount_and_fees.rs  init.rs  liquidate.rs  open_position.rs  remove_collateral.rs  remove_custody.rs  remove_liquidity.rs  remove_pool.rs  set_custody_config.rs  set_custom_oracle_price.rs  set_custom_oracle_price_permissionless.rs  swap.rs  update_pool_aum.rs  upgrade_custody.rs  withdraw_fees.rs
programs/perpetuals/src/state/: custody.rs  multisig.rs  oracle.rs  pool.rs  position.rs
programs/perpetuals/tests/native/: main.rs
programs/perpetuals/tests/native/instructions/: get_update_pool_ix.rs  test_add_custody.rs  test_add_liquidity.rs  test_add_pool.rs  test_close_position.rs  test_get_lp_token_price.rs  test_liquidate.rs  test_open_position.rs  test_remove_liquidity.rs  test_swap.rs  test_update_pool_aum.rs
programs/perpetuals/tests/native/tests_suite/: basic_interactions.rs  mod.rs
programs/perpetuals/tests/native/tests_suite/liquidity/: fixed_fees.rs  insuffisient_fund.rs  min_max_ratio.rs
programs/perpetuals/tests/native/tests_suite/position/: liquidate_position.rs  max_user_profit.rs  min_max_leverage.rs
programs/perpetuals/tests/native/tests_suite/swap/: insuffisient_fund.rs
programs/perpetuals/tests/native/utils/: fixtures.rs  pda.rs  test_setup.rs  utils.rs
(+45 files in other folders)
