[package]
name = "perpetuals"
version = "0.1.0"
description = "Solana Perpetuals Exchange"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/perpetuals"
categories = ["finance"]
keywords = ["solana", "dex", "perpetuals", "futures", "exchange"]
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "perpetuals"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test = []
default = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = "0.30.1"
solana-security-txt = "1.1.1"
# pyth-sdk-solana = "0.10.5"
# ahash = "0.8.12"
num-traits = "0.2.15"
num = "0.4.0"
bytemuck = "1.23.0"
pyth-solana-receiver-sdk = { git = "https://github.com/ibold-dev/pyth-crosschain", rev = "901c3b941f176e0f5b4f2dd401659ec5cf447ce4"}

[dev-dependencies]
solana-program-test = ">=1.17.3, <2.2.1"
solana-sdk = ">=1.17.3, <2.2.1"
tokio = { version = "1.28.2", features = ["macros"]}
bonfida-test-utils = ">=0.2.1, <0.6.9"
bincode = "2.0.1"
maplit = "1.0.2"